crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_reasoning_inference_o1_mini.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 543
expression: inference.infer_capability(&request).await
---
Extended
