crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_reasoning_inference_o1_pro.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 558
expression: inference.infer_capability(&request).await
---
High
