crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_request_format_gemini.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 162
expression: "RequestFormat::Gemini"
---
Gemini
