crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_required_capabilities_all_enabled.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 46
expression: caps
---
vision: true
tools: true
streaming: true
thinking: true
