crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_required_capabilities_default.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 20
expression: caps
---
vision: false
tools: false
streaming: false
thinking: false
