crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_required_capabilities_vision_and_tools.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 33
expression: caps
---
vision: true
tools: true
streaming: false
thinking: false
