crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_streaming_detection_default.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 411
expression: "StreamingExtractor::extract_streaming_preference(&request)"
---
false
