crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_streaming_detection_disabled.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 401
expression: "StreamingExtractor::extract_streaming_preference(&request)"
---
false
