crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_streaming_detection_enabled.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 390
expression: "StreamingExtractor::extract_streaming_preference(&request)"
---
true
